fix: align of text

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
 }
 
 .sidebar h1 {
+  text-align: center;
   font-size: 40px;
   margin-bottom: 10px;
   margin-top: -30px;
